# SomePracticeCmake

./: .gitignore  CMakeLists.txt  vcpkg.json
Source/: LinkedList.h  main.cpp
Tests/: ListTest.cpp
